# aws-ecr-scan-detail

./: .gitignore  Cargo.toml  README.md
src/: main.rs
