[package]
name = "aws-ecr-scan-detail"
version = "0.3.0"
edition = "2024"
rust-version = "1.94"

[profile.release]
overflow-checks = false
incremental = false
opt-level = 3  # Enable aggressive optimizations for release builds
debug = false  # Strip debug symbols from the binary
lto = true  
strip = "symbols"

[dependencies]
aws-config = { version = "1.8.18", features = ["behavior-version-latest"] }
aws-sdk-ecr = "1.119.0"
futures = "0.3"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
